--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "require": {
-        "endroid/qr-code": "^4.8",
-        "endroid/qr-code-bundle": "^4.0"
+        "endroid/qr-code": "^4.8"
     }
 }
